tooling/nargo_cli/tests/snapshots/execution_failure/regression_9852/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Return variable contains a constant value
  ┌─ src/main.nr:9:5
  │
9 │     c[0]
  │     ---- This variable contains a value which is constrained to be a constant. Consider removing this value as additional return values increase proving/verification time
  │
  = Call stack:
    1: main
            at src/main.nr:9:5

bug: Assertion is always false: Index out of bounds
  ┌─ src/main.nr:4:16
  │
4 │     let c = if b[4098222575_u32].1 {
  │                ----------------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:4:16

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:4:16
  │
4 │     let c = if b[4098222575_u32].1 {
  │                -----------------
  │
  = Call stack:
    1: main
            at src/main.nr:4:16

Failed assertion
