tooling/nargo_cli/tests/snapshots/execution_failure/regression_9852/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:4:16
  │
4 │     let c = if b[4098222575_u32].1 {
  │                -----------------
  │
  = Call stack:
    1. src/main.nr:4:16

Failed assertion
