tooling/nargo_cli/tests/snapshots/execution_failure/regression_9852/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: 4098222575 is out of bounds for the array of length 2
  ┌─ src/main.nr:4:16
  │
4 │     let c = if b[4098222575_u32].1 {
  │                -----------------
  │

Error interpreting main function
